--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ yarn-error.log
 art-station.zip
 resources-code-old-design.zip
 public/assets-old/
+resources/views/frontend/posts/show.blade copy-demo-design.php
