Update design and post page changes

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ art-station.zip
 resources-code-old-design.zip
 public/assets-old/
 resources/views/frontend/posts/show.blade copy-demo-design.php
+public/assets.zip
